--- a/templates/theme_detail.html
+++ b/templates/theme_detail.html
@@ -95,10 +95,11 @@
         a.back-link:hover {
             text-decoration: underline;
         }
+      
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="center-box">
         <h1>{{ theme.theme_name }}</h1>
 
         <div class="info">
