--- a/templates/theme_detail.html
+++ b/templates/theme_detail.html
@@ -99,6 +99,14 @@
             align-items: center;
             margin-top: 60px;
         }
+
+    @media (max-width: 500px) {
+        .center-box {
+        width: 96vw;
+        max-width: 340px;
+        padding: 24px 5vw 20px 5vw;
+      }
+    }
     </style>
 </head>
 <body>
