--- a/templates/theme_detail.html
+++ b/templates/theme_detail.html
@@ -105,11 +105,29 @@
 
     @media (max-width: 500px) {
         .center-box {
-            width: 96vw;
-            max-width: 340px;
+            width: 90vw;
             padding: 24px 5vw 20px 5vw;
             }
 }
+
+        .timetable {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 16px;
+        }
+
+        .timetable th, .timetable td {
+            border-bottom: 1px solid #eee;
+            padding: 12px;
+            font-size: 1rem;
+            text-align: center;
+        }
+
+        .timetable thead {
+            background-color: #eef0ff;
+            font-weight: bold;
+        }
+        
     </style>
 </head>
 <body>
