--- a/templates/index.html
+++ b/templates/index.html
@@ -175,7 +175,7 @@
           {% if result.theme_id %}
             <br><div style="margin-top: 10px;">
               🔍 
-            <a href="{{ url_for('theme_detail', theme_id=result.theme_id, store_id=result.store_id) }}">
+            <a href="{{ url_for('theme_detail', theme_id=result['theme_id'], store_id=result['store_id']) }}">
             [ {{ result.theme_name }} ] 시간표 보기
             </a>
             </div>
