--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
 
       <label>
         테마명으로 검색해 주세요
-        <input type="text" name="store" required value="{{ selected_store }}" autocomplete="off" placeholder="테마명 일부 입력 가능 (예:필바에,바여름)" />
+        <input type="text" name="store" required value="{{ selected_store }}" autocomplete="off" placeholder="테마명 일부만 입력 or 띄어쓰기 없이 입력)" />
       </label>
 
       <button class="submit-btn" type="submit">조회하기</button>
